# ros_cosypose

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: ycbv.yaml
launch/: object_recognition.launch
scripts/: object_information.py  object_recognition.py  robot_recognition.py  scene_update.py  test_object_information.py  test_object_recognition.py
src/ros_cosypose/: __init__.py  image_listener.py  image_publisher.py  object_database.py  object_information_service.py  object_predictor.py  object_recognition_server.py  scene_update_service.py
